--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "ajv": "^8.0.0"
   },
   "optionalDependencies": {
-    "sugar-date": "^2.0.6"
+    "sugar-date": "^2.0.6",
+    "chrono-node": "^2.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -48,6 +49,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-add-module-exports": "^1.0.4",
+    "chrono-node": "^2.3.5",
     "coveralls": "^3.1.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
